--- a/native/nif_btreemap/Cargo.toml
+++ b/native/nif_btreemap/Cargo.toml
@@ -10,10 +10,9 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-lazy_static = "1.5.0"
 rustler = "0.34.0"
 
 [profile.release]
 opt-level = 3     # Full optimizations
-debug = true     # No debug info by default
+debug = false     # No debug info by default
 lto = true        # Enable Link Time Optimization
